<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".ui.detailmovie.DetailMovieActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:scaleType="center"
            android:id="@+id/iv_backdrop"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/purple_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="70dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="130dp"
                android:layout_height="180dp"
                android:contentDescription="@string/poster_image"
                android:scaleType="center"
                android:src="@color/teal_200" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_marginEnd="16dp"
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="150dp"
            android:maxLines="1"
            android:text="@string/dummy_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/dummy_year"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/dummy_duration"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/tv_year"
            app:layout_constraintStart_toEndOf="@+id/tv_year"
            app:layout_constraintTop_toTopOf="@+id/tv_year" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:text="@string/dummy_rating"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:drawableStartCompat="@drawable/ic_stars"
            app:layout_constraintStart_toStartOf="@+id/tv_year"
            app:layout_constraintTop_toBottomOf="@+id/tv_year" />


        <TextView
            android:id="@+id/tv_languange"
            android:layout_marginTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_language"
            app:layout_constraintStart_toStartOf="@+id/tv_rating"
            app:layout_constraintTop_toBottomOf="@+id/tv_rating" />

        <TextView
            android:id="@+id/cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/cast"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cast"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/cast"
            app:layout_constraintTop_toBottomOf="@+id/cast"
            tools:listitem="@layout/cast_item" />

        <TextView
            android:id="@+id/genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/genres"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_cast" />

        <TextView
            android:id="@id/tv_genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/dummy_genres"
            app:layout_constraintStart_toStartOf="@+id/genres"
            app:layout_constraintTop_toBottomOf="@+id/genres" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/overview"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_genres"
            app:layout_constraintTop_toBottomOf="@+id/tv_genres" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/dummy_overview"
            app:layout_constraintStart_toStartOf="@+id/overview"
            app:layout_constraintTop_toBottomOf="@+id/overview" />


        <ProgressBar
            android:id="@+id/loading"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/btn_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_favorite_selector"
            android:textOff="@string/add_to_favorite"
            android:textOn="@string/removie_from_fravorite"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>