<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:padding="10dp">

    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:background="@color/teal_200"
        android:scaleType="center" />

    <TextView
        android:id="@+id/tv_season"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/iv_poster"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/iv_poster"
        android:text="@string/season"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_season"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@+id/iv_poster"
        android:text="@string/dummy_year"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_episodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_season"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@+id/tv_year"
        android:text="@string/dummy_episode"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iv_poster"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="5dp"
        android:layout_toEndOf="@id/iv_poster"
        android:maxLines="1"
        android:text="@string/dummy_overview"
        android:textColor="@color/black"
        android:textSize="13sp" />
</RelativeLayout>
